# yakman

./: .gitignore  Cargo.toml  LISENSE  Makefile  README.md  backend.Dockerfile  docker-compose.yaml  frontend.Dockerfile  renovate.json
backend/: Cargo.toml
backend/src/: api_routes.rs  data_types.rs  file_based_storage_service.rs  main.rs  yak_man.rs
backend/src/adapters/: errors.rs  local_file_adapter.rs  mod.rs  postgres_adapter.rs  redis_adapter.rs  utils.rs
backend/src/adapters/aws_s3/: aws_s3_adapter.rs  mod.rs  storage_types.rs
backend/src/adapters/google_cloud_storage/: google_cloud_storage_adapter.rs  mod.rs  storage_types.rs
backend/src/adapters/in_memory/: in_memory_adapter.rs  mod.rs  storage_types.rs
backend/src/adapters/local_file/: local_file_adapter.rs  mod.rs  storage_types.rs
backend/src/adapters/local_file_adapter/: local_file_adapter.rs  mod.rs  storage_types.rs
backend/src/adapters/postgres/: mod.rs
backend/src/adapters/postgres_adapter/: mod.rs
backend/src/adapters/redis/: mod.rs  redis_adapter.rs
backend/src/adapters/redis_adapter/: mod.rs  redis_adapter.rs
backend/src/api/: admin.rs  api_keys.rs  auth.rs  configs.rs  data.rs  instances.rs  labels.rs  lifecycle.rs  mod.rs  oauth.rs  projects.rs  revisions.rs  teams.rs  users.rs  yakman.rs
backend/src/api/validation/: mod.rs
backend/src/auth/: github.rs  google.rs  jwt.rs  mod.rs  oauth_provider.rs  oauth_service.rs  token.rs
backend/src/error/: mod.rs
backend/src/middleware/: mod.rs  roles.rs  token.rs
backend/src/model/: mod.rs  request.rs  response.rs
backend/src/notifications/: discord.rs  mod.rs  slack.rs
backend/src/services/: configs.rs  errors.rs  file_based_storage_service.rs  id.rs  instances.rs  key_value_pair_storage_service.rs  kv_storage_service.rs  labels.rs  mod.rs  oauth_service.rs  password.rs  projects.rs  revisions.rs  service_utils.rs  snapshot.rs  users.rs
backend/src/settings/: mod.rs
backend/src/utils/: mod.rs  raw_query.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/model/: mod.rs  oauth.rs  request.rs  response.rs
docs/: deploying.md  index.md  yakman-basics.md
frontend/: .editorconfig  Cargo.toml  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: api.rs  app.html  main.rs  routes.rs
frontend/src/components/: add_config_page.rs  add_label_page.rs  add_project_page.rs  admin_page.rs  apply_config_page.rs  button.rs  card.rs  config_list_page.rs  header.rs  icons.rs  input.rs  links.rs  login_page.rs  mod.rs  modal.rs  modify_config_instance.rs  pill.rs  popover_menu.rs  revision_history.rs  select.rs  textarea.rs
frontend/src/lib/components/: ApprovedPill.svelte  ContentTypePill.svelte  LabelPill.svelte  MonacoEditor.svelte  StatusPill.svelte  YakManAutoComplete.svelte  YakManButton.svelte  YakManCard.svelte  YakManCheckbox.svelte  YakManHeader.svelte  YakManInput.svelte  YakManLink.svelte  YakManModal.svelte  YakManPopoverMenu.svelte  YakManSegmentSelect.svelte  YakManSelect.svelte  YakManTextArea.svelte  YakManToolTip.svelte
frontend/src/lib/icons/: GearIcon.svelte  HomeIcon.svelte  KebabMenuIcon.svelte  PlusIcon.svelte  ProfileIcon.svelte
frontend/src/lib/stores/: global-modal-state.ts  roles.ts  user-info.ts
frontend/src/lib/trpc/: context.ts  helper.ts  router.ts
frontend/src/lib/trpc/routes/: admin.ts  api-keys.ts  auth.ts  configs.ts  data.ts  instances.ts  labels.ts  lifecycle.ts  oauth.ts  projects.ts  revisions.ts  teams.ts  users.ts  yakman.ts
frontend/src/lib/types/: types.ts
frontend/src/lib/utils/: changelog-utils.ts  content-type-utils.ts  cookie-util.ts  error-helpers.ts  role-utils.ts  yaml.worker.js
frontend/src/pages/: add_config_page.rs  add_label_page.rs  add_project_page.rs  admin_page.rs  apply_config_page.rs  config_list_page.rs  login_page.rs  mod.rs  modify_config_instance.rs  revision_history.rs  view_config_page.rs
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte  +page.ts  ProjectActions.svelte
frontend/src/routes/add-config/: +page.server.ts  +page.svelte
frontend/src/routes/add-label/: +page.svelte
frontend/src/routes/add-project/: +page.svelte
frontend/src/routes/admin/: +page.svelte  +page.ts  ApiKeyTab.svelte  CopyableTextBlock.svelte  UsersTab.svelte
frontend/src/routes/apply-changes/[config]/[instance]/: +page.svelte  +page.ts  ConfigPreview.svelte
frontend/src/routes/labels/: +page.svelte  +page.ts
frontend/src/routes/labels/edit/[[label]]/: +page.svelte  +page.ts
frontend/src/routes/login/: +page.server.ts  +page.svelte  +page.ts
frontend/src/routes/login/init/: +server.ts
frontend/src/routes/modify-instance/[config]/[[instance]]/: +page.svelte  +page.ts  LabelSelection.svelte
frontend/src/routes/oauth-callback/: +server.ts
frontend/src/routes/project/[[id]]/: +page.svelte  +page.ts
frontend/src/routes/project/[[uuid]]/: +page.svelte  +page.ts
frontend/src/routes/refresh-token/: +server.ts
frontend/src/routes/session/logout/: +server.ts
frontend/src/routes/session/oauth-callback/: +page.svelte  +server.ts
frontend/src/routes/session/refresh-token/: +server.ts
frontend/src/routes/session/reset-password/: +page.svelte  +page.ts
frontend/src/routes/teams/: +page.svelte  +page.ts
frontend/src/routes/teams/modify/[[id]]/: +page.svelte  +page.ts
frontend/src/routes/view-instance/[config]/[instance]/: +page.svelte  +page.ts  ChangelogTab.svelte  RevisionsTab.svelte  Table.svelte
frontend/style/: output.css
legacy_frontend/: Cargo.toml  Trunk.toml  index.html  package-lock.json
mock-openid-connect-server/: clients-config.json  docker-compose.yaml
my-app/: package-lock.json  package.json
ross-test/: Cargo.toml
ross-test/src/: add_config_page.rs  add_label_page.rs  api.rs  config_list_page.rs  main.rs  modify_config_instance.rs
ross-test/src/components/: apply_config_page.rs  mod.rs  modify_config_instance.rs  revision_history.rs
src/: adapters.rs  config_man.rs  config_man_state.rs  data_types.rs  local_file_adapter.rs  main.rs  (+2 more)
(+91 files in other folders)
