[package]
name = "config-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.3", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
redis = "0.22.3"
sqlx = { version = "0.6.3", features = [ "runtime-tokio-rustls", "postgres" ] }