[package]
name = "yak-man"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
redis = "0.23.0"
sqlx = { version = "0.6.3", features = [ "runtime-tokio-rustls", "postgres" ] }
async-trait = {version = "0.1.68"}


[workspace]
members = ["backend"]
default-members = ["backend"]
