[package]
name = "yak-man-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.107"
redis = "0.23.3"
sqlx = { version = "0.7.2", features = [ "runtime-tokio-rustls", "postgres" ] }
async-trait = {version = "0.1.74"}
uuid = {version = "1.4.1", features = ["v4"]}
chrono = "0.4.31"
thiserror = "1.0.49"
anyhow = "1.0"
derive_more = "0.99.17"
utoipa = { version = "3.5.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.1.5", features = ["actix-web"] }
actix-middleware-etag = "0.2.0"
log = "0.4"
env_logger = "0.10.0"
oauth2 = "4.4.2"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
actix-web-grants = "3.0.2"
jwt = "0.16.0"
hmac = { version = "0.12", features = ["reset"] }
sha2 = "0.10"
aws-config = "0.56.1"
aws-sdk-s3 = "0.33.0"
bytes = "1.5.0"
tokio = "1.32.0"
sha256 = "1.4.0"
futures-util = "0.3.28"
short-crypt = "1.0.28"
openidconnect = "3.3.1"
base64 = "0.21.4"