[package]
name = "yak-man-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
redis = { version = "0.25", features = ["r2d2"] }
r2d2 = "0.8.10"
async-trait = {version = "0.1.77"}
uuid = {version = "1.8", features = ["v4"]}
chrono = "0.4.37"
thiserror = "1.0"
anyhow = "1.0"
derive_more = "0.99.17"
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "6", features = ["actix-web"] }
actix-middleware-etag = "0.3.0"
log = "0.4"
env_logger = "0.11"
oauth2 = "4.4.2"
dotenv = "0.15.0"
reqwest = { version = "0.12", features = ["json"] }
actix-web-grants = "4"
jwt = "0.16.0"
hmac = { version = "0.12", features = ["reset"] }
sha2 = "0.10"
aws-config = "1.1"
aws-sdk-s3 = "1.21"
bytes = "1.6"
tokio = "1.37"
sha256 = "1.5"
futures-util = "0.3"
short-crypt = "1.0.28"
openidconnect = "3.5.0"
base64 = "0.22"
google-cloud-storage = "0.16"
moka = { version = "0.12", features = ["sync"] }
argon2 = "0.5.3"
cron = "0.12.1"
url = "2.5.0"

[dev-dependencies]
mockall = "0.12"
