[package]
name = "yak-man-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
chrono = "0.4.24"
utoipa = { version = "3.3.0", features = ["actix_extras"] }