[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
gloo-net = "0.2.6"
serde = {version = "1.0", features = ["derive"]}
wasm-bindgen-futures = "0.4.34"
yak-man-core = {path = "../core"}
gloo-console = "0.2.3"
web-sys = "0.3.61"