[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = "0.4.0"
leptos_router = { version = "0.4.0", features = ["csr"] }
console_log = "1.0"
log = "0.4"
console_error_panic_hook = "0.1.7"
gloo-net = "0.2.6"
serde = {version = "1.0", features = ["derive"]}
wasm-bindgen-futures = "0.4.34"
yak-man-core = {path = "../core"}
web-sys = "0.3.61"
serde_json = "1.0"
chrono = "0.4.24"
oauth2 = "4.4.1"
gloo-storage = "0.2.2"
thiserror = "1.0.40"
difference = "2.0"
chrono-humanize = "0.2.2"